update Contact, verify fields/dropdowns, add htmlpurifier

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "guzzle/guzzle": "3.9.3"
+        "guzzle/guzzle": "3.9.3",
+        "ezyang/htmlpurifier": "dev-master"
     },
     "autoload": {
         "psr-4": {
